--- a/build.xml
+++ b/build.xml
@@ -2,11 +2,19 @@
 
 <project name="jho-upp" default="main">
 
-	<target name="main">
+	<target name="main" unless="done">
 		<echo message="Jetzt geht's los." />
 		<copy todir="../../../.local/lib/upp">
 			<fileset dir="." includes="*.lua" />
 		</copy>
+		<property name="done" value="done" />
 	</target>
 
+
+	<target name="test" unless="done">
+		<exec executable="upp" output="0_TMP/${ant.project.name}.md">
+			<arg line="-l jhomarkup.lua -l html5.lua -l ModeSlides.lua TestText.md" />
+		</exec>
+		<property name="done" value="done" />
+	</target>
 </project>
